The test/interaction Makefile now has direct support for .hs files.

--- a/test/interaction/README
+++ b/test/interaction/README
@@ -33,5 +33,7 @@ Test framework for interactions
   against for each run of the test.
 
 - If the framework above is too limited, then one can use script-files
-  named SomeTest.sh instead of SomeTest.in. These files can contain
-  arbitrary Bash code.
+  named SomeTest.hs or SomeTest.sh instead of SomeTest.in. These files
+  can contain arbitrary Haskell or Bash code, respectively. (The .in
+  files have precedence over Haskell files, which in turn have
+  precedence over Bash files.)
