--- a/test/LaTeXAndHTML/succeed/Indenting3.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting3.tex
@@ -38,7 +38,7 @@
 \AgdaField{proj₁}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Sigma}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
