--- a/test/LaTeXAndHTML/succeed/Issue1053.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1053.quick.tex
@@ -22,7 +22,7 @@
 \AgdaBound{x}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{foo}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
