--- a/test/LaTeXAndHTML/succeed/Issue1241.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.quick.tex
@@ -14,7 +14,7 @@ This is the actual test.
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
