--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.quick.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.quick.tex
@@ -22,7 +22,7 @@
 \AgdaDatatype{Nat}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{pattern}\AgdaSpace{}%
 \AgdaInductiveConstructor{two}%
 \>[14]\AgdaSymbol{=}\AgdaSpace{}%
@@ -37,7 +37,7 @@
 \AgdaInductiveConstructor{two}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Bot}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
