--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.quick.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.quick.tex
@@ -22,7 +22,7 @@
 \AgdaDatatype{Nat}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{pattern}\AgdaSpace{}%
 \AgdaInductiveConstructor{two}%
 \>[14]\AgdaSymbol{=}\AgdaSpace{}%
@@ -43,7 +43,7 @@
 \AgdaInductiveConstructor{three}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{pattern}\AgdaSpace{}%
 \AgdaInductiveConstructor{five}%
 \>[14]\AgdaSymbol{=}\AgdaSpace{}%
@@ -51,7 +51,7 @@
 \AgdaInductiveConstructor{four}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Bot}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
