--- a/test/LaTeXAndHTML/succeed/QuickLaTeX.tex
+++ b/test/LaTeXAndHTML/succeed/QuickLaTeX.tex
@@ -10,7 +10,7 @@
 \AgdaSymbol{\#{-}\}}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{Sigma}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
@@ -47,7 +47,7 @@
 \AgdaField{proj₁}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{D}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -60,7 +60,7 @@
 \AgdaDatatype{D}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{f}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
