--- a/test/LaTeXAndHTML/succeed/Relative-indentation.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.quick.tex
@@ -25,7 +25,7 @@
 \>[5]\AgdaPostulate{E}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaPostulate{F}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -207,7 +207,7 @@ text \begin{code}%
 \>[10]\AgdaPrimitiveType{Set}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{Zzzzzzzzz}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
