--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.quick.tex
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.quick.tex
@@ -8,13 +8,13 @@
 \>[0]\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{ThreeNewLines}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\<%
 \end{code}
 \end{document}
