--- a/test/LaTeXAndHTML/succeed/Indenting7.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting7.tex
@@ -8,7 +8,7 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{A₁}\AgdaSpace{}%
@@ -20,7 +20,7 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{B₁}\AgdaSpace{}%
@@ -32,7 +32,7 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[4][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{C₁}\AgdaSpace{}%
@@ -44,7 +44,7 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[6][@{}l@{\AgdaIndent{0}}]%
 \>[8]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{D₁}\AgdaSpace{}%
@@ -56,7 +56,7 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[4][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{C₃}\AgdaSpace{}%
@@ -68,7 +68,7 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{A₃}\AgdaSpace{}%
