--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.tex
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.tex
@@ -9,14 +9,14 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{5}\AgdaSpace{}%
 \AgdaDatatype{\_>>\_}\AgdaSpace{}%
 \AgdaDatatype{\_<<\_}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{\_>>\_}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
