--- a/test/LaTeXAndHTML/succeed/Issue1062.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1062.tex
@@ -14,7 +14,7 @@
 \AgdaSymbol{\#{-}\}}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
 \AgdaKeyword{BUILTIN} SIZE    \AgdaPostulate{Size}%
 \>[27]\AgdaSymbol{\#{-}\}}\<%
@@ -32,7 +32,7 @@
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{List}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
@@ -63,7 +63,7 @@
 \AgdaBound{A}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{\_×\_}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
@@ -95,11 +95,11 @@
 \AgdaModule{\_×\_}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{{-}{-} Sized streams via head/tail.}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{Stream}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
@@ -143,7 +143,7 @@
 \AgdaKeyword{public}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\_∷ˢ\_}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -176,15 +176,15 @@
 \AgdaBound{as}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{{-}{-} Streams and lists.}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{{-}{-} Prepending a list to a stream.}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\_++ˢ\_}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -221,11 +221,11 @@
 \AgdaBound{s}\AgdaSymbol{)}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{{-}{-} Unfold which produces several outputs at one step}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{List1}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
@@ -260,7 +260,7 @@
 \AgdaField{tail}\AgdaSymbol{)}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{⊤}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -279,7 +279,7 @@
 \AgdaComment{{-}{-} problem: imports not colored}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{unfold⁺}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -293,7 +293,7 @@
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{(}\AgdaBound{step}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -317,7 +317,7 @@
 \AgdaSymbol{→}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -332,7 +332,7 @@
 \AgdaBound{A}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaField{head}%
 \>[6]\AgdaSymbol{(}\AgdaFunction{unfold⁺}\AgdaSpace{}%
 \AgdaBound{step}\AgdaSpace{}%
