--- a/test/LaTeXAndHTML/succeed/Issue2019.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2019.quick.tex
@@ -36,11 +36,11 @@
 \AgdaModule{Agda.Builtin.String}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{{-}{-} Various whitespace characters: "    ".}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{various{-}whitespace{-}characters}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPostulate{String}\<%
