--- a/test/LaTeXAndHTML/succeed/Issue982.tex
+++ b/test/LaTeXAndHTML/succeed/Issue982.tex
@@ -68,7 +68,7 @@
 \AgdaField{proj₁}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Sigma}\AgdaSpace{}%
 \AgdaKeyword{public}\<%
