--- a/test/LaTeXAndHTML/succeed/Multiline.tex
+++ b/test/LaTeXAndHTML/succeed/Multiline.tex
@@ -7,7 +7,7 @@
 \AgdaModule{Agda.Builtin.String}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{argh}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPostulate{String}\<%
