--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.tex
@@ -22,13 +22,13 @@
 \AgdaDatatype{Nat}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{\_}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{pattern}\AgdaSpace{}%
 \AgdaInductiveConstructor{two}%
@@ -45,7 +45,7 @@
 \AgdaInductiveConstructor{two}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Bot}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
