--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -10,13 +10,13 @@
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Apa}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{bepa}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
@@ -29,7 +29,7 @@
 \AgdaBound{x}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Cepa}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -42,7 +42,7 @@
 \AgdaDatatype{Cepa}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaRecord{Depa}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -58,7 +58,7 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -67,7 +67,7 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{postulate}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
