--- a/test/LaTeXAndHTML/succeed/TeXExtension.tex
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.tex
@@ -13,7 +13,7 @@ Foo
 \AgdaKeyword{where}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Bool}\AgdaSpace{}%
@@ -32,7 +32,7 @@ Foo
 \AgdaDatatype{Bool}\<%
 \\
 %
-\\
+\\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaFunction{b}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
